[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Background.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/Targeting_Button_Left.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/InfoPanelComponents/TargetingPanel/TargetingPanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Targeting_Button.png-cdc1e29228f720fa8399151b48c4d2d5.stex"

[node name="TargetingPanel" type="MarginContainer"]
margin_right = 118.0
margin_bottom = 24.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 118.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/separation = 0

[node name="ButtonLeftMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_top = 9.0
margin_right = 11.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_bottom = 2

[node name="ButtonLeft" type="TextureButton" parent="HBoxContainer/ButtonLeftMarginer"]
margin_right = 11.0
margin_bottom = 13.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )

[node name="TargetPanelMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 11.0
margin_right = 107.0
margin_bottom = 24.0
mouse_filter = 2
custom_constants/margin_right = 3
custom_constants/margin_left = 3

[node name="PanelBackground" type="TextureRect" parent="HBoxContainer/TargetPanelMarginer"]
margin_left = 3.0
margin_right = 93.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Marginer" type="MarginContainer" parent="HBoxContainer/TargetPanelMarginer"]
margin_left = 3.0
margin_top = 11.0
margin_right = 93.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_bottom = 4

[node name="TargetingLabel" type="Label" parent="HBoxContainer/TargetPanelMarginer/Marginer"]
margin_right = 90.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Targeting"
align = 1

[node name="ButtonRightMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 107.0
margin_top = 9.0
margin_right = 118.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/margin_bottom = 2

[node name="ButtonRight" type="TextureButton" parent="HBoxContainer/ButtonRightMarginer"]
margin_right = 11.0
margin_bottom = 13.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 2 )
[connection signal="pressed" from="HBoxContainer/ButtonLeftMarginer/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonRightMarginer/ButtonRight" to="." method="_on_ButtonRight_pressed"]
